syntax = "proto3";
package path.protocol;

option go_package = "github.com/buildwithgrove/path/observation/protocol";

message ShannonDetails {
  string supplier_address=1;
}
